# automata

./: CMakeLists.txt  readme.md
include/: automata.hpp
src/: CMakeLists.txt  automata.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
